--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/feather-icons"></script>
     <title>Dinner and A Movie</title>
 </head>
 <body>
-    
+    <i data-feather="film"></i>
 </body>
+<script>
+    feather.replace()
+  </script>
 </html>
