--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Dinner and A Movie</title>
 </head>
 <body>
-    
+  <div class="card" style="width: 18rem;">
+    <div class="card-img-top" ></div>
+    <div class="card-body">
+      <h5 class="card-title"></h5>
+      <p class="card-text"></p>
+      <a href="#" class="btn btn-primary" onclick="randomMeal(),randomMovie()" >Go somewhere</a>
+    </div>
+  </div>
+  
+
 </body>
+<script src="/dinner-movie.js" ></script>
 </html>
