moved index to top level for netlify

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
 <!-- Navbar info -- icon, home page link & placeholder text to be filled in later, if necessary. It's reactive with a drop down menu when the screen size is small. -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/home-page/index.html" id="icon"><i data-feather="film" width="30" height="30" class="d-inline-block align-top"></i></a>
+  <a class="navbar-brand" href="/index.html" id="icon"><i data-feather="film" width="30" height="30" class="d-inline-block align-top"></i></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/home-page/index.html" >Home<span class="sr-only"></span></a>
+      <a class="nav-item nav-link active" href="/index.html" >Home<span class="sr-only"></span></a>
       <a class="nav-item nav-link" href="#">Movies</a>
       <a class="nav-item nav-link" href="#">Meals</a>
       <a class="nav-item nav-link" href="#">About us</a>
