moved indexto top level

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/index.html" >Home<span class="sr-only"></span></a>
       <a class="nav-item nav-link" href="#">Movies</a>
-      <a class="nav-item nav-link" href="#">Meals</a>
+      <a class="nav-item nav-link" href="/meal-page/meals.html">Meals</a>
       <a class="nav-item nav-link" href="#">About us</a>
       <a class="nav-item nav-link" href="#">Date Night Deals</a>
     </div>
