added my info to page

--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -22,8 +22,8 @@
             <img src="../about-us/asset/pics/kecia.jpg" alt="Kecia" style="width:100%">
             <div class="container">
               <h2>Kecia Brown</h2>
-              <p class="title"> Web Designer</p>
-              <p>Some text .</p>
+              <p class="title"> Full Stack Software Developer</p>
+              <p>Based in Atlanta, GA, Kecia is a spontaneous Software Developer who enjoys traveling, roller skating and spending time with family and friends.</p>
               <a href="https://www.linkedin.com/in/kecia-brown-44722493/"><i class="fa fa-linkedin"></i></a>
 
               <a href="https://github.com/JohnGallion/dinner-and-a-movie"><i class="fa fa-github-square"></i></a>
