--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/index.html" >Home<span class="sr-only"></span></a>
-      <a class="nav-item nav-link" href="#">About us</a>
+      <a class="nav-item nav-link" href="/about-us/about-us.html">About us</a>
       <a class="nav-item nav-link" href="/deals-page/deals.html">Date Night Deals</a>
     </div>
   </div>
