--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="content">
           <div class="info-container">
-            <img src="../about-us/asset/pics/kecia.jpg" alt="Kecia" style="width:100%">
+            <a href="https://www.linkedin.com/in/kecia-brown-44722493/"><img src="../about-us/asset/pics/kecia.jpg" alt="Kecia" style="width:100%"></a>
             <div class="container">
               <h2>Kecia Brown</h2>
               <p class="title"> Full Stack Software Developer</p>
@@ -54,7 +54,7 @@
       
         
           <div class="info-container">
-            <img src="../about-us/asset/pics/John.jpg" alt="John" style="width:100%">
+            <a href="https://www.linkedin.com/in/john-gallion-04aba5229/"><img src="../about-us/asset/pics/John.jpg" alt="John" style="width:100%"></a>
             <div class="container">
               <h2>John Gallion </h2>
               <p class="title">Full Stack Software Engineer</p>
