--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -41,7 +41,7 @@
               <p>Based in Atlanta, GA, Kecia is a spontaneous Software Developer who enjoys traveling, roller skating and spending time with family and friends.</p>
               <a href="https://www.linkedin.com/in/kecia-brown-44722493/"><button class="links"><i class="fa fa-linkedin"></i></button></a>
 
-              <a href="https://github.com/adoredior"><button class="links"><i class="fa fa-github-square"></i></a>
+              <a href="https://github.com/adoredior"><button class="links"><i class="fa fa-github-square"></i></button></a>
 
               <!-- <a href="#"><i class="fa fa-twitter"></i></a>  -->
             </ul>
@@ -66,7 +66,7 @@
               
               <a href="https://www.linkedin.com/in/john-gallion-04aba5229/"><button class="links"><i class="fa fa-linkedin"></i></button></a>
 
-              <a href="https://github.com/JohnGallion"><button class="links"><i class="fa fa-github-square"></i></a>
+              <a href="https://github.com/JohnGallion"><button class="links"><i class="fa fa-github-square"></i></button></a>
 
               <!-- <a href="#"><i class="fa fa-twitter"></i></a>  -->
 
